--- a/_layouts/browse.html
+++ b/_layouts/browse.html
@@ -11,8 +11,8 @@ custom-foot: js/browse-js.html
         <form role="search" id="browseFilter" onsubmit="submitFilter(); return false;">
             <div class="input-group input-group-lg">
                 <input type="text" class="form-control" id="filterTextBox" placeholder="Filter ... " aria-label="Search"> 
-                <button class="btn btn-success" type="submit" title="Filter items" id="filterButton" >Search!</button>
-                <button class="btn btn-outline-secondary filter" onclick="resetFilter(); return false;" data-filter="">Reset!</button>
+                <button class="btn btn-success" type="submit" title="Filter items" id="filterButton" >Search</button>
+                <button class="btn btn-outline-secondary filter" onclick="resetFilter(); return false;" data-filter="">Reset</button>
             </div>
         </form>
         <div class="h2" id="numberOf"></div>
@@ -27,7 +27,7 @@ custom-foot: js/browse-js.html
                 <button class="dropdown-item browse-sort-item" data-filter="title">Title of Item</button>
                 {% assign sort_options = site.data.config-browse | where_exp: 'i','i.sort_name != nil' %}
                 {% for o in sort_options %}
-                <button class="dropdown-item browse-sort-item" data-filter="{{ o.field | escape }}">{{ o.sort_name }}</button>
+                <button class="dropdown-item browse-sort-item" data-filter="date">Date of Publication</button>
                 {% endfor %}
             </div>
         </div>
