--- a/_includes/js/browse-js.html
+++ b/_includes/js/browse-js.html
@@ -121,7 +121,7 @@ function filterItems(arr,q) {
         }
     }
     // add number 
-    document.querySelector("#numberOf").innerHTML = filteredItems.length + " of " + items.length + " items";
+    document.querySelector("#numberOf").innerHTML = filteredItems.length + " out of " + items.length + " books";
     
     // add stuff, make cards first in giant var, then add all at once to speed things up
     var cards = "";
