--- a/_includes/js/browse-js.html
+++ b/_includes/js/browse-js.html
@@ -12,7 +12,7 @@
 /* add items */
 var items = [
     {% for i in items %}
-    { "title":{{ i.title | strip | jsonify }}, "format":{% if i.format %}{{ i.format | jsonify }}{% else %}""{% endif %}, "image_thumb": {{ i.image_thumb | jsonify }}, {% for f in fields %}{% if i[f.field] %}{{ f.field | jsonify }}:{{ i[f.field] | strip | jsonify }},{% endif %}{% endfor %} {% if i.youtubeid %} "youtube": {{ i.youtubeid | jsonify }}, {% endif %}{% if  i.filename contains '/' %}"filename": "{{ i.filename }}" {% else %}"filename":"{{ '/objects/' | relative_url | append: i.filename }}"{% endif %}, "link": "{% if i.parentid %}{{ i.parentid }}#{{ i.objectid }}{% else %}{{ i.objectid }}{% endif %}", "id":{{ i.objectid | jsonify }} }{% unless forloop.last %},{% endunless %}{% endfor %}
+    { "title":{{ i.title | strip | jsonify }}, "format":{% if i.format %}{{ i.format | jsonify }}{% else %}""{% endif %}, {% for f in fields %}{% if i[f.field] %}{{ f.field | jsonify }}:{{ i[f.field] | strip | jsonify }},{% endif %}{% endfor %} {% if i.youtubeid %} "youtube": {{ i.youtubeid | jsonify }}, {% endif %}{% if  i.filename contains '/' %}"filename": "{{ i.filename }}" {% else %}"filename":"{{ '/objects/' | relative_url | append: i.filename }}"{% endif %}, "link": "{% if i.parentid %}{{ i.parentid }}#{{ i.objectid }}{% else %}{{ i.objectid }}{% endif %}", "id":{{ i.objectid | jsonify }} }{% unless forloop.last %},{% endunless %}{% endfor %}
 ];
 
 /* function to create cards for each item */ 
@@ -26,19 +26,19 @@ function makeCard(obj) {
         imgSrc = 'https://img.youtube.com/vi/' + obj.youtube + '/hqdefault.jpg';
     } else if (obj.format.includes("image")) {
         imgSrc = obj.filename;
-    }  if (obj.format.includes("audio")) {
+    } else if (obj.format.includes("audio")) {
         thumbSrc = '{{ "/assets/lib/icons/" | relative_url }}{{ icons.icon-audio }}.svg';
-    }  if (obj.format.includes("video")) {
+    } else if (obj.format.includes("video")) {
         thumbSrc = '{{ "/assets/lib/icons/" | relative_url }}{{ icons.icon-video }}.svg';  
-    }  if (obj.format.includes("pdf")) {
+    } else if (obj.format.includes("pdf")) {
         thumbSrc = '{{ "/assets/lib/icons/" | relative_url }}{{ icons.icon-pdf }}.svg';
-    }  if (obj.format.includes("record")) {
+    } else if (obj.format.includes("record")) {
         thumbSrc = '{{ "/assets/lib/icons/" | relative_url }}{{ icons.icon-record }}.svg';
-    }  if (obj.format.includes("compound")) {
+    } else if (obj.format.includes("compound")) {
         thumbSrc = '{{ "/assets/lib/icons/" | relative_url }}{{ icons.icon-compound-object }}.svg';
-    }  if (obj.format.includes("multiple")) {
+    } else if (obj.format.includes("multiple")) {
         thumbSrc = '{{ "/assets/lib/icons/" | relative_url }}{{ icons.icon-multiple }}.svg';
-    }  {
+    } else {
         thumbSrc = '{{ "/assets/lib/icons/" | relative_url }}{{ icons.icon-default }}.svg';
     }  
     // start card
@@ -49,12 +49,10 @@ function makeCard(obj) {
     }
     // title
     card += '<div class="card-body text-center"> <h3 class="card-title h4"><a href="' + itemHref + '" class="text-dark">' + obj.title + '</a></h3>';
-// show thumbnail if available
-if(obj.image_thumb) {
-card += '<p><a href="' + itemHref + '"><img class="lazyload w-50" data-src="' + obj.image_thumb + '" alt="Thumbnail of ' + obj.title + '"></a></p>';
-}  if(thumbSrc){
-card += '<p><a href="' + itemHref + '"><img class="lazyload w-50" data-src="' + thumbSrc + '" alt="Icon of ' + obj.title + '"></a></p>';
-}
+    // thumb for non-photo items
+    if(thumbSrc){
+        card += '<p><a href="' + itemHref + '"><img class="lazyload w-50" data-src="' + thumbSrc + '" alt="Image of ' + obj.title + '"></a></p>';
+    }
     // other fields
     card += '<p class="card-text">';
     {% for f in fields %}{% unless f.hidden == 'true' %}
@@ -67,7 +65,7 @@ card += '<p><a href="' + itemHref + '"><img class="lazyload w-50" data-src="' + 
         card += '<a class="btn btn-sm btn-secondary m-1 text-wrap" href="{{ page.url | relative_url }}#' + encodeURIComponent(btns[i].trim()) + '">' + btns[i].trim() + '</a>';
       }
     }
-    {%  %}
+    {% else %}
     card += obj[{{ f.field | jsonify }}];
     {% endif %}
     {% unless forloop.last %}card += '<br>';{% endunless %}
@@ -80,11 +78,11 @@ card += '<p><a href="' + itemHref + '"><img class="lazyload w-50" data-src="' + 
         obj.format.split("/").pop().replace("_", " ").toUpperCase() + ' <svg class="bi icon-sprite"><use xlink:href="{{ "/assets/lib/cb-icons.svg" | relative_url }}#';
         if(obj.format.includes('image')){
             card += 'icon-image';
-        }  if(obj.format.includes('audio')){
+        } else if(obj.format.includes('audio')){
             card += 'icon-audio';
-        }  if(obj.format.includes('video')){
+        } else if(obj.format.includes('video')){
             card += 'icon-video';
-        }  if(obj.format.includes('multiple')){
+        } else if(obj.format.includes('multiple')){
             card += 'icon-multiple';
         } else if(obj.format.includes('compound')){
             card += 'icon-compound-object';
